# GDS_Helper_Agents

./: pyproject.toml  requirements.txt
.claude/: settings.local.json
build_agents/: Explainer_agent.ipynb  How_it_works.md  Query_agent.ipynb  Query_agent.py  Slack_agent.ipynb  Slack_agent.py  __init__.py  explainer_agent.py  main_agent.py
build_books/: Slack_agent.ipynb  Slack_agent.md  WORKFLOW_ARCHITECTURE.md  diagnose_slack.py  main_agent.ipynb  test_slack_connection.py
