[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gds-helper-agents"
version = "0.1.0"
description = "AI agents built with OpenAI SDK and Python"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true